# DistributedImagingServices

./: .gitignore  CMakeLists.txt  README.md
include/: Constants.hpp  SafeQueue.hpp  Serialization.hpp
src/common/: Serialization.cpp
src/extractor/: main.cpp
src/generator/: main.cpp
src/logger/: main.cpp
